      INTERMediator_DBAdapter.db_deleteWithAuth
      INTERMediator_DBAdapter.db_createRecord
      INTERMediator_DBAdapter.db_createRecordWithAuth
      INTERMediator_DBAdapter.db_copy
      INTERMediator_DBAdapter.db_copyWithAuth
- Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php are removed.
- Metadata.json is removed, composer.json takes over.
- [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native 
  Authentication or LDAP Authentication.
- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.
- [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
  separator wasn't seen as we wished.
- [BUG FIX] In some case, the record number of related context was affected by pagination record limits.
- [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
- [BUG FIX] In step navigation page, sometimes tap affected to clicking any elements on moved page.

Ver.5.8-dev (in development)
- Improve speed performance of Native Authentication and LDAP Authentication.
- Add DB_FileMaker_DataAPI class to support FileMaker Data API of FileMaker Server 17.
- Support retrieving image files in container fields when using DB_FileMaker_DataAPI class.
- Support uploading files to container fields when using DB_FileMaker_DataAPI class.
- Update FMDataAPI.php (Ver.11) for FileMaker Data API.
- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.